<?xml version="1.0" encoding="UTF-8"?>
<project xmlns="http://maven.apache.org/POM/4.0.0"
         xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
         xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
    <modelVersion>4.0.0</modelVersion>

    <groupId>com.ming</groupId>
    <artifactId>spring-cloud-demo</artifactId>
    <packaging>pom</packaging>
    <version>1.0-SNAPSHOT</version>
    <name>Ming项目demo</name>
    <description>ming spring cloud demo</description>

    <modules>
        <module>user</module>
        <module>common</module>
        <module>gateway</module>
        <module>core</module>
        <module>base</module>
    </modules>

    <properties>
        <maven.compiler.source>11</maven.compiler.source>
        <maven.compiler.target>11</maven.compiler.target>
        <jdk.version>11</jdk.version>
        <encoding>UTF-8</encoding>
        <spring-boot.version>2.6.1</spring-boot.version>
        <spring-platform.version>Cairo-SR8</spring-platform.version>
        <spring.cloud.version>2020.0.3</spring.cloud.version>
        <spring.cloud.alibaba.version>2.2.0.RELEASE</spring.cloud.alibaba.version>
        <springfox.boot.version>3.0.0</springfox.boot.version>
        <owasp.dependency.check.version>6.5.0</owasp.dependency.check.version>
        <groovy.bom.version>3.0.9</groovy.bom.version>
        <spring.plugin.version>2.0.0.RELEASE</spring.plugin.version>
        <maven.compiler.plugin.version>3.8.1</maven.compiler.plugin.version>
        <maven.resources.plugin.version>3.2.0</maven.resources.plugin.version>
    </properties>

    <dependencyManagement>
        <dependencies>
            <dependency>
                <!-- Import dependency management from Spring Boot -->
                <groupId>org.springframework.boot</groupId>
                <artifactId>spring-boot-dependencies</artifactId>
                <version>${spring-boot.version}</version>
                <type>pom</type>
                <scope>import</scope>
            </dependency>
            <dependency>
                <groupId>org.springframework.cloud</groupId>
                <artifactId>spring-cloud-dependencies</artifactId>
                <version>${spring.cloud.version}</version>
                <type>pom</type>
                <scope>import</scope>
            </dependency>
            <dependency>
                <groupId>com.alibaba.cloud</groupId>
                <artifactId>spring-cloud-alibaba-dependencies</artifactId>
                <version>${spring.cloud.alibaba.version}</version>
                <type>pom</type>
                <scope>import</scope>
            </dependency>
            <!-- https://mvnrepository.com/artifact/io.spring.platform/platform-bom -->
            <dependency>
                <groupId>io.spring.platform</groupId>
                <artifactId>platform-bom</artifactId>
                <version>${spring-platform.version}</version>
                <type>pom</type>
                <scope>import</scope>
            </dependency>
            <dependency>
                <groupId>org.codehaus.groovy</groupId>
                <artifactId>groovy-bom</artifactId>
                <version>${groovy.bom.version}</version>
                <type>pom</type>
                <scope>import</scope>
            </dependency>
        </dependencies>
    </dependencyManagement>

    <build>
        <finalName>workbench</finalName>
        <pluginManagement>
            <plugins>
                <plugin>
                    <groupId>org.springframework.boot</groupId>
                    <artifactId>spring-boot-maven-plugin</artifactId>
                    <version>${spring-boot.version}</version>
                    <executions>
                        <execution>
                            <goals>
                                <goal>repackage</goal>
                            </goals>
                        </execution>
                    </executions>
                </plugin>
            </plugins>
        </pluginManagement>
        <plugins>
            <!--owasp dependency check maven plugin-->
            <plugin>
                <!-- https://mvnrepository.com/artifact/org.owasp/dependency-check-maven -->
                <groupId>org.owasp</groupId>
                <artifactId>dependency-check-maven</artifactId>
                <version>${owasp.dependency.check.version}</version>
                <configuration>
                    <!--配置忽略指定类型依赖检测-->
                    <retireJsAnalyzerEnabled>false</retireJsAnalyzerEnabled>
                    <golangDepEnabled>false</golangDepEnabled>
                </configuration>
            </plugin>
            <!--指定编译jdk版本 默认为1.5-->
            <plugin>
                <groupId>org.apache.maven.plugins</groupId>
                <artifactId>maven-compiler-plugin</artifactId>
                <version>${maven.compiler.plugin.version}</version>
                <configuration>
                    <source>${java.version}</source>
                    <target>${java.version}</target>
                    <encoding>${encoding}</encoding>
                    <compilerArgs>--enable-preview</compilerArgs>
                    <!--                    <annotationProcessorPaths>-->
                    <!--                        <path>-->
                    <!--                            <groupId>org.mapstruct</groupId>-->
                    <!--                            <artifactId>mapstruct-processor</artifactId>-->
                    <!--                            <version>${org.mapstruct.version}</version>-->
                    <!--                        </path>-->
                    <!--                        <path>-->
                    <!--                            <groupId>org.projectlombok</groupId>-->
                    <!--                            <artifactId>lombok</artifactId>-->
                    <!--                        </path>-->

                    <!--                        <path>-->
                    <!--                            <groupId>org.projectlombok</groupId>-->
                    <!--                            <artifactId>lombok-mapstruct-binding</artifactId>-->
                    <!--                            <version>0.1.0</version>-->
                    <!--                        </path>-->
                    <!--                    </annotationProcessorPaths>-->
                </configuration>
            </plugin>
            <!-- 解决资源文件的编码问题 -->
            <plugin>
                <groupId>org.apache.maven.plugins</groupId>
                <artifactId>maven-resources-plugin</artifactId>
                <version>${maven.resources.plugin.version}</version>
                <configuration>
                    <encoding>${encoding}</encoding>
                </configuration>
            </plugin>
        </plugins>
    </build>
    <repositories>
        <repository>
            <id>aliyun</id>
            <name>aliyun</name>
            <layout>default</layout>
            <url>http://maven.aliyun.com/nexus/content/groups/public</url>
            <snapshots>
                <enabled>false</enabled>
            </snapshots>
            <releases>
                <enabled>true</enabled>
            </releases>
        </repository>
    </repositories>
</project>
